# moveit_ros_control

./: 切换控制器.md
opencv/: atan.cpp  canny.cpp  rotate.cpp
robotiq/robotiq_description/launch/: display_robotiq85.launch
robotiq/robotiq_gazebo/: CMakeLists.txt
ros_control_example/: CMakeLists.txt  package.xml
ros_control_example/config/: controllers.yaml
ros_control_example/include/ros_control_example/: robot_hardware_interface.h
ros_control_example/launch/: check_position_controller.launch
ros_control_example/rviz/: rviz.rviz
ros_control_example/src/: robot_hardware_interface_node.cpp
ros_control_example/urdf/: motor.urdf
ur5_description/launch/: display.launch  display_with_gripper.launch
ur5_description/urdf/: ur5.urdf
ur5_moveit_config/: .setup_assistant  package.xml
ur5_moveit_config/config/: fake_controllers.yaml  gazebo_ur5.urdf  ompl_planning.yaml  ur5.srdf
ur5_moveit_config/launch/: demo_real.launch  gazebo.launch  planning_context.launch  ros_controllers.launch
ur5_moveit_server/: CMakeLists.txt  package.xml
ur5_moveit_server/src/: ur5_hand_eye.cpp  ur5_moveit_server.cpp  ur5_multi_point.cpp  ur5_single_point.cpp
ur5_ros_control/: CMakeLists.txt  package.xml  ur5_controllers_plugins.xml
ur5_ros_control/config/: multijoint.yaml.yaml  one_joint.yaml  usercontroller.yaml
ur5_ros_control/include/ur5_ros_control/: robot_hardware_interface.h  robot_hardware_interface_sim.h  ur5_controllers.h
ur5_ros_control/launch/: check_position_controller.launch  ur5_ros_control.launch  ur5_ros_control_real.launch
ur5_ros_control/src/: ur5_controllers.cpp  ur5_ros_control.cpp  ur5_ros_control_real.cpp
